--- a/DealershipApp/LoginForm/App.config
+++ b/DealershipApp/LoginForm/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="LoginForm.Properties.Settings.DealerDataBaseConnectionString"
+            connectionString="Data Source=DESKTOP-5CCJBGD;Initial Catalog=DealerDataBase;Integrated Security=True;Pooling=False"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
